# mathapi

./: .flake8  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  entrypoint.sh  gunicorn_logging.conf  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  supervisord.conf
client/public/: index.html
client/src/: App.svelte  Errors.svelte  Exponent.svelte  Factorial.svelte  Fibonacci.svelte  FibonacciAsync.svelte  main.js
deploy/: migrate-job.yaml
helm/: Chart.yaml  jenkins_values.yaml  values.yaml
helm/charts/: jenkins-3.0.12.tgz  postgresql-backup-0.0.1.tgz
helm/dashboards/: mathapi.json
helm/templates/: deployment.yaml
mathapi/: __init__.py  app.py  models.py  testing.py  views.py
mathapi/celery/: __init__.py  tasks.py  worker.py
mathapi/config/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
mathapi/migrations/: alembic.ini  env.py
mathapi/migrations/versions/: 0651204e623d_add_completed_request_column.py  41f93c995f52_requests_table.py  5ad84af62fe1_convert_request_arguments_to_bigint.py  a06108ef6642_add_async_columns.py
mathapi/resources/: __init__.py  api_resource.py  exponent.py  factorial.py  fibonacci.py  fibonacci_async.py
mathapi/services/: auth.py  exponent.py  factorial.py  fibonacci.py  requests.py
tests/: test_integration.py  test_mathapi.py  test_models.py
tests/resources/: test_exponent.py  test_factorial.py  test_fibonacci.py  test_fibonacci_async.py
tests/services/: test_auth.py  test_exponent.py  test_factorial.py  test_fibonacci.py  test_requests.py
