[tool.poetry]
name = "mathapi"
version = "0.1.0"
description = "Yet another math api"
authors = ["Daniel Popov <dido.popov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
gunicorn = "^20.0.4"
python3-logstash = "^0.4.80"
python-json-logger = "^2.0.1"
Flask-RESTful = "^0.3.8"
prometheus-flask-exporter = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
pre-commit = "^2.9.3"
isort = "^5.6.4"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
order_by_type = true
case_sensitive = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
